# guima-ghost-horse

./: BLUEPRINT.md  CLAUDE.md  aim.py  pyproject.toml  run.sh
aim/: __init__.py  __main__.py  ableton_bridge.py  conversation.py  drum_engine.py  main.py  prompts.py  tool_engine.py
aim/analysis/: __init__.py  _validate.py  audio_analysis.py  midi_conversion.py  stem_separation.py
aim/tools/: __init__.py  analysis_tools.py  clip_tools.py  device_tools.py  drum_tools.py  management_tools.py  mixer_tools.py  session_tools.py  track_tools.py  transport_tools.py
tests/: test_ableton_bridge.py  test_analysis.py  test_drum_engine.py  test_tool_definitions.py  test_tool_engine.py
